<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="@dimen/indent_16"
    android:paddingEnd="19dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="14dp"
        android:paddingBottom="16dp"
        tools:ignore="UseCompoundDrawables">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/btn_arrow_back"
        android:layout_marginEnd="@dimen/indent_24"
        android:contentDescription="@string/back_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:fontFamily="sans-serif"
        android:textFontWeight="500"
        android:textColor="@color/black_settings"
        android:textSize="@dimen/text_size_22" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/indent_21"
        android:paddingBottom="@dimen/indent_21"
        android:layout_marginTop="@dimen/indent_24">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/dark_theme"
            android:fontFamily="sans-serif"
            android:textColor="@color/black_settings"
            android:textSize="@dimen/text_size_16" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_gravity="end"
            android:theme="@style/SettingsSwitch"
            app:trackTintMode="src_atop" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/indent_21"
        android:paddingBottom="@dimen/indent_21">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/share_app"
            android:fontFamily="sans-serif"
            android:textColor="@color/black_settings"
            android:textSize="@dimen/text_size_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share_icon"
            android:layout_gravity="end"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/indent_21"
        android:paddingBottom="@dimen/indent_21">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/write_to_support"
            android:fontFamily="sans-serif"
            android:textColor="@color/black_settings"
            android:textSize="@dimen/text_size_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/support_icon"
            android:layout_gravity="end"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/indent_21"
        android:paddingBottom="@dimen/indent_21">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/user_agreement"
            android:fontFamily="sans-serif"
            android:textColor="@color/black_settings"
            android:textSize="@dimen/text_size_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_forward_icon"
            android:layout_gravity="end"/>
    </FrameLayout>

    </LinearLayout>
