<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:paddingLeft="@dimen/indent_16"
    android:paddingRight="@dimen/indent_16">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="@dimen/indent_16"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_22"
        android:fontFamily="sans-serif"
        android:textFontWeight="500"/>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/search"
        android:textAllCaps="false"
        android:drawablePadding="@dimen/indent_8"
        android:fontFamily="sans-serif"
        android:textFontWeight="500"
        android:textColor="@color/black_main"
        android:textSize="@dimen/text_size_22"
        android:backgroundTint="@color/white"
        android:layout_weight="1"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="@dimen/indent_16"
        app:icon="@drawable/btn_search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/indent_8"
        app:iconTint="@color/black_main"
        app:cornerRadius="@dimen/indent_16"/>

    <Button
        android:id="@+id/btn_media"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/media"
        android:textAllCaps="false"
        android:drawablePadding="@dimen/indent_8"
        android:fontFamily="sans-serif"
        android:textFontWeight="500"
        android:textColor="@color/black_main"
        android:textSize="@dimen/text_size_22"
        android:backgroundTint="@color/white"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/indent_16"
        app:icon="@drawable/btn_music"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/indent_8"
        app:iconTint="@color/black_main"
        app:cornerRadius="@dimen/indent_16"/>

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:drawablePadding="@dimen/indent_8"
        android:fontFamily="sans-serif"
        android:textFontWeight="500"
        android:textColor="@color/black_main"
        android:textSize="@dimen/text_size_22"
        android:backgroundTint="@color/white"
        android:layout_weight="1"
        android:layout_marginBottom="28dp"
        app:icon="@drawable/btn_settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/indent_8"
        app:iconTint="@color/black_main"
        app:cornerRadius="@dimen/indent_16"/>

</LinearLayout>