<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color_search"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/indent_16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="@dimen/indent_16"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_arrow_back"
            android:layout_marginEnd="@dimen/indent_24"
            android:contentDescription="@string/back_button"
            app:tint="@color/text_color_search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            android:textColor="@color/text_color_search"
            android:textSize="@dimen/text_size_22" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/indent_8"
        android:background="@drawable/search_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/btn_search_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_search"
                android:layout_marginStart="@dimen/indent_8"
                android:layout_marginEnd="@dimen/indent_8"
                android:contentDescription="@string/search"
                app:tint="@color/text_color_search_hint" />

            <EditText
                android:id="@+id/input_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/search_hint"
                android:maxLines="1"
                android:inputType="text"
                android:textColor="@color/text_color_search_line"
                android:textColorHint="@color/text_color_search_hint"
                android:background="@drawable/search_background" />

        </LinearLayout>

        <ImageView
            android:id="@+id/input_clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:paddingRight="12dp"
            android:src="@drawable/close_clear_cancel"
            app:tint="@color/text_color_search_hint"
            android:visibility="gone" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTracks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_16"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        tools:listitem="@layout/track_item"
        tools:itemCount="7"/>

</LinearLayout>